tokenomics added back2r

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -97,6 +97,10 @@ body {
   transition: transform 0.5s ease;
 
 }
+.card-container::-webkit-scrollbar {
+    display: none;
+}
+
 
 @keyframes cambio {
   from {
